[gd_scene load_steps=17 format=3 uid="uid://pvvnkdn6u7y5"]

[ext_resource type="Script" path="res://screens/main/main.gd" id="1_0ufrw"]
[ext_resource type="Script" path="res://screens/main/customers/customer_factory.gd" id="2_dnvch"]
[ext_resource type="Texture2D" uid="uid://dbueov7x0qeqe" path="res://screens/main/background.png" id="2_u1ul0"]
[ext_resource type="PackedScene" uid="uid://lnfput3ouduw" path="res://ui/pause_menu/pause_menu.tscn" id="3_8c0kv"]
[ext_resource type="PackedScene" uid="uid://bru1ae5j80tii" path="res://screens/main/ui/money_and_rep_tracker/money_and_rep.tscn" id="5_0uejy"]
[ext_resource type="PackedScene" uid="uid://br236elfur261" path="res://screens/main/ui/inventory/drawer.tscn" id="5_nl71h"]
[ext_resource type="PackedScene" uid="uid://bsgio2wgxwjd1" path="res://screens/main/pedestal/pedestal.tscn" id="8_mkd11"]
[ext_resource type="PackedScene" uid="uid://6acoxw3otoc3" path="res://common/items/ingredients/ingredient.tscn" id="10_7anjc"]
[ext_resource type="Resource" uid="uid://djqumbpv7xrlh" path="res://common/items/ingredients/nightshade_petals/nightshade_petals.tres" id="11_jgs4v"]
[ext_resource type="PackedScene" uid="uid://cjjarcohy2vqe" path="res://screens/main/stations/cauldron/cauldron.tscn" id="12_rj1v1"]
[ext_resource type="Texture2D" uid="uid://b18cm5tr1tqr8" path="res://screens/main/bell/bell_outer.png" id="13_x0440"]
[ext_resource type="PackedScene" uid="uid://dda00qymrm5of" path="res://screens/main/ui/end_day_and_skip/end_day_and_skip.tscn" id="13_yll6s"]
[ext_resource type="PackedScene" uid="uid://b6cq5upjosmpf" path="res://screens/main/ui/clock/new_clock.tscn" id="17_n5klg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs1cp"]
size = Vector2(0.456603, 0.192607)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1aqou"]
size = Vector2(417, 39.5)

[node name="Main" type="Node2D"]
script = ExtResource("1_0ufrw")

[node name="CustomerFactory" type="Node" parent="."]
script = ExtResource("2_dnvch")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource("3_8c0kv")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NewClock" parent="CanvasLayer" instance=ExtResource("17_n5klg")]
position = Vector2(165, 165)

[node name="Room" type="Node2D" parent="."]
scale = Vector2(6, 6)

[node name="Room Sprite" type="Sprite2D" parent="Room"]
position = Vector2(160, 90)
texture = ExtResource("2_u1ul0")

[node name="Right Shelf" type="StaticBody2D" parent="Room"]
position = Vector2(250, 118.333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Right Shelf"]
position = Vector2(-6.37506, 0.333336)
scale = Vector2(331.25, 11.25)
shape = SubResource("RectangleShape2D_fs1cp")

[node name="ColorRect" type="ColorRect" parent="Room/Right Shelf"]
offset_left = -82.0
offset_top = -1.0
offset_right = 73.0
offset_bottom = 1.0
color = Color(0.368627, 0.247059, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="Left Shelf" type="StaticBody2D" parent="Room"]
position = Vector2(45.5, 119.333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Left Shelf"]
position = Vector2(-11, 2.563e-06)
scale = Vector2(331.25, 11.25)
shape = SubResource("RectangleShape2D_fs1cp")

[node name="ColorRect" type="ColorRect" parent="Room/Left Shelf"]
offset_left = -44.0
offset_top = -1.0
offset_right = 65.0
offset_bottom = 1.0
color = Color(0.368627, 0.247059, 0.2, 1)

[node name="Floor" type="StaticBody2D" parent="Room"]
position = Vector2(276, 211)
collision_layer = 2147483651

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Floor"]
position = Vector2(-115.5, -21.75)
shape = SubResource("RectangleShape2D_1aqou")

[node name="Ceiling" type="StaticBody2D" parent="Room"]
position = Vector2(272, -6)
collision_layer = 2147483651

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Ceiling"]
position = Vector2(-115.5, -13.75)
shape = SubResource("RectangleShape2D_1aqou")

[node name="Rwall" type="StaticBody2D" parent="Room"]
position = Vector2(327, 192)
rotation = 1.5708
collision_layer = 2147483651

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Rwall"]
position = Vector2(-115.5, -12.7501)
shape = SubResource("RectangleShape2D_1aqou")

[node name="Lwall" type="StaticBody2D" parent="Room"]
position = Vector2(-6, -44)
rotation = 4.71239
collision_layer = 2147483651

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Lwall"]
position = Vector2(-115.5, -13.75)
shape = SubResource("RectangleShape2D_1aqou")

[node name="MoneyAndRep" parent="." instance=ExtResource("5_0uejy")]
offset_left = 1612.0
offset_top = 23.0
offset_right = 1892.0
offset_bottom = 134.0

[node name="Pedestal" parent="." instance=ExtResource("8_mkd11")]
position = Vector2(388, 546)

[node name="Cauldron" parent="." instance=ExtResource("12_rj1v1")]
position = Vector2(852, 840)
scale = Vector2(6, 6)


[node name="InventoryDrawer" parent="." instance=ExtResource("5_nl71h")]
custom_minimum_size = Vector2(600, 690)
layout_direction = 2
anchors_preset = -1
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 173.0
offset_right = 2521.0
offset_bottom = 863.0
grow_horizontal = 1
grow_vertical = 1

[node name="Ingredient" parent="." instance=ExtResource("10_7anjc")]
position = Vector2(306, 890)
contact_monitor = false
max_contacts_reported = 0
data = ExtResource("11_jgs4v")

[node name="EndDayAndSkip" parent="." instance=ExtResource("13_yll6s")]
offset_left = -3.0
offset_right = 48.0
offset_bottom = 39.0

[node name="BellButton" type="TextureButton" parent="."]
offset_left = 303.0
offset_top = 163.0
offset_right = 422.0
offset_bottom = 283.0
texture_normal = ExtResource("13_x0440")
stretch_mode = 5

[connection signal="customer_created" from="CustomerFactory" to="." method="_on_new_customer"]
[connection signal="potion_made" from="Cauldron" to="." method="_on_item_made"]
[connection signal="pressed" from="BellButton" to="." method="_on_ring_bell"]
